new headerMenu + headerBar for mobile

--- a/flamenco/index.html
+++ b/flamenco/index.html
@@ -16,31 +16,63 @@
 <body>
 
 <header>
-  <div id="headerMenu"></div>
+  <div id="headerMenu">
+
+    <div class="logo"><a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a></div>
+
+    <div><a>Фламенко</a></div>
+
+    <div class="headDivTog"><a href="../flamenco/" title="flamenco"><img src="../icons/flamenco.png" alt="flamenco"></a></div>
+    
+    <div class="headDivTog"><a class="item">Стили Фламенко</a>
+      <div>
+<div><a href="#Alegrias">Alegrias</a></div>
+<div><a href="#Bulerias">Bulerias</a></div>
+<div><a href="#Granaina">Granaina</a></div>
+<div><a href="#Malaguena">Malaguena</a></div>
+<div><a href="#Petenera">Petenera</a></div>
+<div><a href="#Seguiriya">Seguiriya</a></div>
+<div><a href="#Solea">Solea</a></div>
+<div><a href="#Tangos">Tangos</a></div>
+<div><a href="#Tarantas">Tarantas</a></div>
+<div><a href="#Tientos">Tientos</a></div>
+      </div>
+    </div>
+    <div id="headerBar_toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+  </div>
+  <div id="headerBar">
+    <div><a href="../flamenco/" title="flamenco"><img src="../icons/flamenco.png" alt="flamenco"></a></div>
+
+    <div><a class="item">Стили Фламенко</a>
+      <div>
+<div><a href="#Alegrias">Alegrias</a></div>
+<div><a href="#Bulerias">Bulerias</a></div>
+<div><a href="#Granaina">Granaina</a></div>
+<div><a href="#Malaguena">Malaguena</a></div>
+<div><a href="#Petenera">Petenera</a></div>
+<div><a href="#Seguiriya">Seguiriya</a></div>
+<div><a href="#Solea">Solea</a></div>
+<div><a href="#Tangos">Tangos</a></div>
+<div><a href="#Tarantas">Tarantas</a></div>
+<div><a href="#Tientos">Tientos</a></div>
+      </div>
+    </div>
+  </div>
 </header>
 
 <main class="import_Data flex">
 
-<nav>
-	<a href="#Alegrias">Alegrias</a>
-	<a href="#Bulerias">Bulerias</a>
-	<a href="#Granaina">Granaina</a>
-	<a href="#Malaguena">Malaguena</a>
-	<a href="#Petenera">Petenera</a>
-	<a href="#Seguiriya">Seguiriya</a>
-	<a href="#Solea">Solea</a>
-	<a href="#Tangos">Tangos</a>
-	<a href="#Tarantas">Tarantas</a>
-	<a href="#Tientos">Tientos</a>
-</nav>
-
 <div id="links" class="img16">
-	<a href="http://www.flamencopolis.com/archives/282" title="flamencopolis"><img src="http://www.flamencopolis.com/favicon.ico" alt="flamencopolis"> flamencopolis</a><br>
-	<a href="http://www.twirpx.com/files/art/music/instrumental/stringed/guitar/flamenco/" title="stringed/guitar/flamenco/"><img src="http://www.twirpx.com/favicon.ico" alt="книги.guitar"> книги.guitar</a><br>
-	<a href="http://www.twirpx.com/files/art/music/note/guitar/flamenco/" title="note/guitar/flamenco/"><img src="http://www.twirpx.com/favicon.ico" alt="книги.note.guitar"> книги.note.guitar</a><br>
+	<a href="http://www.flamencopolis.com/archives/282" title="flamencopolis">flamencopolis</a><br>
+	<a href="http://www.twirpx.com/files/art/music/instrumental/stringed/guitar/flamenco/" title="stringed/guitar/flamenco/">книги.guitar</a><br>
+	<a href="http://www.twirpx.com/files/art/music/note/guitar/flamenco/" title="note/guitar/flamenco/">книги.note.guitar</a><br>
 	<a href="http://www.flamenco.ru"><img src="http://www.flamenco.ru/favicon.ico" alt="flamenco.ru"> flamenco.ru</a><br>
 	<a href="http://www.foroflamenco.com"><img src="http://www.foroflamenco.com/image/favorite.ico" alt="foroflamenco"> foroflamenco</a><br>
-	<a href="http://guitarclub.online/category/uroki/gitara-flamenko/"><img src="http://guitarclub.online/favicon.ico" alt="guitarclub.online"> guitarclub.online</a><br>
+	<a href="http://guitarclub.online/category/uroki/gitara-flamenko/">guitarclub.online</a>...<br>
 </div>
 
 <div>
