--- a/guitar/index.html
+++ b/guitar/index.html
@@ -16,7 +16,26 @@
 <body>
 
 <header>
-  <div id="headerMenu"></div>
+  <div id="headerMenu">
+
+    <div class="logo"><a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a></div>
+
+    <div><a>Guitar</a></div>
+
+    <div class="headDivTog"><a href="../guitar/" title="Guitar"><img src="../icons/guitar.png" alt="guitar"></a></div>
+
+    <div id="headerBar_toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+  </div>
+  <div id="headerBar">
+    <div>
+      <a href="../guitar/" title="Guitar"><img src="../icons/guitar.png" alt="guitar"> Guitar</a>
+    </div>
+  </div>
 </header>
 
 <main class="flex">
