--- a/programming/angular.html
+++ b/programming/angular.html
@@ -11,6 +11,7 @@
     <a href="https://youtu.be/NaZwVUHnmfE">Angular 8 + RxJS. Приложение Органайзер С Нуля</a><br>
     <a href="https://youtu.be/-pb6_zRokKU">Создание приложения на Angular 4.ITVDN (2017)</a><br>
     <a href="https://youtu.be/XVzed9zlVfw">Простое приложение на Angular .Hillel (2017)</a><br>
+    <a href="https://youtu.be/rse7-kzxetQ">AngularNYC meetup 2019</a><br>
     <a href="https://angular.io/guide/universal">Angular Universal (SSR)</a><br>
     <a href="http://swimlane.github.io/ngx-datatable/#client-sorting">пагинация</a><br>
     <a href="https://www.twilio.com/blog/faster-javascript-web-apps-angular-universal-transferstate-api-watchdog">TransferState Service and an API Watchdog</a><br>
