--- a/programming/golang.html
+++ b/programming/golang.html
@@ -14,13 +14,15 @@
 		<a href="https://www.youtube.com/channel/UCq-OB01F8YnS-FJpeJRCvMQ/">GopherCon Russia</a><br>
 		<a href="https://groups.google.com/forum/#!forum/golang-ru">Golang Russian</a><br>
 		<a href="https://tech.avito.ru">avito.tech</a> , <a href="https://twitter.com/AvitoTech">twitter</a><br>
-		<a href="https://habr.com/ru/company/avito/blog/475760/">Junior-разработчики — почему мы их <br>нанимаем и как мы с ними работаем</a><br>
     gopher.js<br>
     <a href="https://youtu.be/p1ILhiq5Clw">Работа с сетью в Go (2018)</a><br>
     <a href="https://youtu.be/CX4GSErFenI">Как устроен garbage collector в Go 1.9 (2017)</a><br>
     <a href="https://youtu.be/HtQLBdD82vE">Кодогенерация в Go (2017)</a><br>
     Kubernetes<br>
-    <a href="https://www.vugu.org/">Vugu: A modern UI library for Go+WebAssembly</a>
+    <a href="https://www.vugu.org/">Vugu: A modern UI library for Go+WebAssembly</a><br>
+    <a href="https://youtu.be/rcvA5gSwj2o">“Go, please”: language server под микроскопом | Илья Данилкин, Авито. 2020</a><br>
+    <a href="https://youtu.be/hKnWq4RmNKE">Работа с миграциями базы данных в Go | Тамара Веденина, Ozon.ru. 2020</a><br>
+    <a href="https://youtu.be/mKT-bLdRGvQ">CI/CD для Go проектов на drone.io | Алик Хилажев, Marketplace Technologies. 2020</a><br>
 	</div>
 
 <div>
