--- a/programming/net.html
+++ b/programming/net.html
@@ -8,3 +8,7 @@
 	<a href="https://youtu.be/FmrHmZXnicA">HTTP/2 Push: как использовать эффективно?</a><br>
 	<a href="https://youtu.be/3e7GK8hcDx0">HTTP/3 - что это такое и чего ожидать?</a><br>
 </div>
+
+<div>
+	localhost === 127.0.0.1
+</div>
