--- a/programming/vue.html
+++ b/programming/vue.html
@@ -17,6 +17,7 @@
     <a href="https://youtu.be/nh6dH6OzmXE">10 вещей о Vue, которые вам стоит знать. 2019</a><br>
     <a href="https://youtu.be/xot0SjunN2U">Специфика рендеринга vue.js-приложений на сервере. 2019</a><br>
     <a href="https://youtu.be/Ynhk9GqSsZI">Nuxt.js from the Core. 2019</a><br>
+    <a href="https://youtu.be/DlXSA3_lSX4">Vue.js - Создание веб-приложения - Настройка firebase. Регистрация, аутентификация, Database</a><br>
   </div>
 
 <div>
