--- a/surf/index.html
+++ b/surf/index.html
@@ -16,9 +16,27 @@
 <body>
 
 <header>
-  <div id="headerMenu"></div>
-</header>
+  <div id="headerMenu">
 
+    <div class="logo"><a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a></div>
+
+    <div><a>Серфинг</a></div>
+
+    <div class="headDivTog"><a href="../surf/" title="Серфинг"><img src="../icons/surf.png" alt="Серфинг"></a></div>
+
+    <div id="headerBar_toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+  </div>
+  <div id="headerBar">
+    <div>
+      <a href="../surf/" title="Серфинг"><img src="../icons/surf.png" alt="Серфинг"> Серфинг</a>
+    </div>
+  </div>
+</header>
 <main class="import_Data flex">
 
 <div>
