--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -14,9 +14,24 @@
 
 <header>
   <div id="headerMenu">
-    <div>
-      <img src="" alt="">
+
+    <div class="logo"><a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a></div>
+
+    <div class="headDivTog"><a href="#produkty">Питание</a></div>
+
+    <div class="headDivTog"><a href="../zdorovie/" title="Здоровье"><img src="../icons/zdorovie.png" alt="Здоровье"></a></div>
+
+    <div id="headerBar_toggle">
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
+
+  </div>
+  <div id="headerBar">
+    <div><a href="../zdorovie/" title="Здоровье"><img src="../icons/zdorovie.png" alt="Здоровье">Здоровье</a></div>
+
+    <div><a href="#produkty">Питание</a></div>
   </div>
 </header>
 
@@ -37,10 +52,6 @@
   <a href="https://youtu.be/doMEYcInm68">КРОССФИТ</a><br>
   <a href="https://youtu.be/-4HNUNzEVMU">ПОСЛЕ ТРАВМЫ связок и суставов. ЛЕЧЕНИЕ.</a><br>
 </div>
-
-<nav>
-  <a href="produkty.html">Питание</a>
-</nav>
 
 <div>
 К факторам, снижающим уровень «плохого» холестерина, относятся:
