--- a/zdorovie/produkty.html
+++ b/zdorovie/produkty.html
@@ -1,26 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Питание</title>
-  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
-  <link rel="stylesheet" href="../CSS/style.css">
-  <script src="../JS/main.js" type="module"></script>
-</head>
-
-<body>
-
-<header>
-  <div id="headerMenu">
-    <div>
-      <img src="" alt="">
-      <span>Питание</span>
-    </div>
-  </div>
-</header>
-
-<main class="flex">
+<div id="pageTitle">Питание</div>
 
 <div id="links">
     <li><a href="http://wkus-no.ru/"><img src="https://wkus-no.ru/static/images/logo.png"> Вкус-Но</a></li>
@@ -29,6 +7,7 @@
     <li><a href="http://www.avitasport.ru/"><img src="http://www.avitasport.ru/images/design/logo//icon_16x16.png"> AvitaSport.ru</a></li>
     <li><a href="http://www.optimumnutrition.ru/"><img src="http://www.optimumnutrition.ru/local/templates/itlooks/assets/img/static/white-logo.svg"> Optimum Nutrition</a></li>
 </div>
+
 <div>
 <a href="https://youtu.be/B1w4pgzHoZs">ТАЙНОЕ ПРАВИЛЬНОЕ ПИТАНИЕ ДЕН4ИКА. Максимум с Минимальными Усилиями.</a><br>
 <a href="https://youtu.be/Y5SswVr6mdw">ПОЧЕМУ ЛЮДИ ТАК МЕРЗКО ПИТАЮТСЯ</a><br>
@@ -41,12 +20,14 @@
 <a href="https://youtu.be/KvP54gA-0c8">БУЧ ДИЕТА</a><br>
 <a href="https://youtu.be/G8Gs4tXAR40">КЕТО ДИЕТА</a><br>
 </div>
+
 <div>
 <img src="http://leonardasf1.narod.ru/images/PRD_CEL_NTR_VPR_HC_group.jpg">
 <br>
 Протеин MuscleTech Nitro-Tech Hardcore Pro Series
 BSN NO-Xplode 3.0 1,13 кг
 </div>
+
 <div>
 <h4> <span class="style4">Молочнокислые продукты: Творог ,ряженка, простокваша, кумыс</span></h4>
  Лактоза и казеин в Молоке плохо усваиваются взрослым человеком , в отличие от молочнокислых продуктов
@@ -56,6 +37,7 @@ BSN NO-Xplode 3.0 1,13 кг
 <br> + Значительное количество метионина содержится в казеине.
 <br> от 1000р/кг протеина
 </div>
+
 <div>
 <h4> <span class="style5">Яйца</span> </h4>
  + в белке Альбумин
@@ -63,6 +45,7 @@ BSN NO-Xplode 3.0 1,13 кг
 <br> + Витамин F - Полиненасыщенные жирные кислоты (омега-3 и омега-6) содержится в желтке :)
 <br> - наряду с холестерином и насыщенными жирными кислотами :(
 </div>
+
 <div>
 <h4> <span class="style4">Птица</span> </h4>
  Не жирная птица: куриные и индюшачьи грудки,
@@ -255,9 +238,3 @@ BSN NO-Xplode 3.0 1,13 кг
 <tr><td>Грибы белые сушёные</td><td bgcolor="#ccc">27,6</td><td>6,8</td><td>10</td><td>211ккал</td><td> *</td><td>белок</td></tr>
 <tr><td> * </td><td> *</td><td> *</td><td> *</td><td> *</td><td> *</td><td> *</td></tr>
   </table>
-
-</main>
-
-<footer></footer>
-</body>
-</html>
