--- a/sailing/sailboats/Galeon.html
+++ b/sailing/sailboats/Galeon.html
@@ -2,7 +2,7 @@
 
 <div id="links">
 	<a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B0%D0%BB%D0%B5%D0%BE%D0%BD">wikipedia.org</a><br>
-	<a href="http://imtw.ru/topic/6930-korabli-novogo-vremeni/page__st__10">page__st__10</a>
+	<a href="http://imtw.ru/topic/6930-korabli-novogo-vremeni/page__st__10">page__st__10</a><br>
 	<a href="http://imtw.ru/topic/6930-korabli-novogo-vremeni/page__st__30__p__876687">page__st__30__p__876687</a><br>
 </div>
 
